--- a/order.html
+++ b/order.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<!--THIS IS NAVIGATION BAR-->
 	<div id="navBar" class="container">
 	    <nav id="mainNav" class="navbar-fixed-top">
 			<ul>
@@ -21,12 +22,12 @@
 			</ul>
 		</nav>
 	</div>
-
+	<!--THIS IS HEADER AREA-->
 	<div id="header" class="container">	
 		<h1>Dawg Coffee<br>Orders</h1>
 		<p id="motto">Supplying Beans to Sleepy Huskies Since 2015</p>
 	</div>
-
+	<!--THIS IS ORDER SECTION-->
 	<div class="container">
 		<p id="order">Coming soon...</p>
 	</div>
