--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<!--THIS IS NAVIGATION BAR-->
 	<div id="navBar" class="container">
 	    <nav id="mainNav" class="navbar-fixed-top">
 			<ul>
@@ -20,17 +21,17 @@
 			</ul>
 		</nav>
 	</div>
-
+	<!--THIS IS HEADER AREA-->
 	<div id="header" class="container">	
 		<h1>Dawg Coffee</h1>
 		<p id="motto">Caffeinating Sleepy Huskies Since 2015</p>
 	</div>
-
+	<!--THIS IS HEADLINE SECTION-->
 	<div id="headline" class="container">
 		<div id="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.664 21.665"><path d="M2.756 20.725h2.95c.04.257.254.458.523.458h6.706c.27 0 .482-.2.523-.458h2.95c.498 0 .902-.404.902-.903H1.854c0 .5.404.903.902.903zM20.865 11.444c-.752-.61-1.81-.62-2.508-.542.02-.486.03-.983.03-1.5H0c0 4.97.752 8.556 5.51 9.894h7.367c1.885-.53 3.135-1.418 3.964-2.6 1.807-.035 4.712-.746 4.82-3.24.048-1.092-.406-1.698-.795-2.012zm-3.267 3.826c.346-.89.55-1.89.664-2.988.488-.08 1.33-.13 1.754.215.078.064.32.262.293.9-.058 1.293-1.662 1.727-2.712 1.873zM7.49 8.704s3.5-.257 1.897-3.208C8.1 3.126 8.393 1.736 10.04.48c0 0-5.397 1.376-2.25 5.63 1.156 1.855-.3 2.594-.3 2.594z"/><path d="M9.85 8.468s2.804-.59 1.278-2.846c-.554-.978.21-1.327.21-1.327s-1.805.057-1.043 1.608c.61 1.247.43 1.955-.445 2.565z"/></svg></div>
 		<p>Exquisite drinks made from fair-trade coffee, served in a relaxing and studious environment</p>
 	</div>
-
+	<!--THIS IS CAFE INFORMATION SECTION-->
 	<div id="information" class="container">
 		<div class="row">
 			<div class="col-md-4">
@@ -50,7 +51,7 @@
 			</div>
 		</div>
 	</div>
-
+	<!--THIS IS MENU SECTION-->
 	<div id="menu" class="container"> 
 		<h2>Menu</h2>
 		<div class="row">
@@ -78,7 +79,7 @@
 			</div>
 		</div>
 	</div>
-	
+	<!--THIS IS OUR STORY SECTION-->
 	<div id="story" class="container">
 		<h2>Our Story</h2>
 		<img src="img/story.jpg">
@@ -86,7 +87,7 @@
 		<p>Slowly crossing the deck from the scuttle, Ahab leaned over the side and watched how his shadow in the water sank and sank to his gaze, the more and the more that he strove to pierce the profundity. But the lovely aromas in that enchanted air did at last seem to dispel, for a moment, the cankerous thing in his soul. That glad, happy air, that winsome sky, did at last stroke and caress him; the step-mother world, so long cruel&mdash;forbidding&mdash;now threw affectionate arms round his stubborn neck, and did seem to joyously sob over him, as if over one, that however wilful and erring, she could yet find it in her heart to save and to bless. From beneath his slouched hat Ahab dropped a tear into the sea; nor did all the Pacific contain such wealth as that one wee drop.</p>
 		<p>Starbuck saw the old man; saw him, how he heavily leaned over the side; and he seemed to hear in his own true heart the measureless sobbing that stole out of the centre of the serenity around. Careful not to touch him, or be noticed by him, he yet drew near to him, and stood there.</p>
 	</div>
-	
+	<!--THIS IS FOOTER-->
 	<div id="footer" class="container">
 		<div id="firstBlock" class="col-sm-3">
 			<p>&copy;&nbsp;2015 Dawg Coffee</p>
